--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,9 +4,7 @@
   font-family: 'Josefin Sans', sans-serif;
   margin: 0;
   font-size: 20px;
-  max-width: 10360px;
-  max-height: 2000px;
-  background-color: rgb(236, 236, 236);
+  max-width: 1360px;
 }
 
 body {
@@ -30,6 +28,7 @@ code {
   max-width: 100%;
   margin: 0 auto;
   border-bottom: 1px solid #f2f2f2;
+  background-color: rgb(236, 236, 236);
 }
 
 .navbar a {
@@ -81,6 +80,7 @@ code {
 
 .item-list-content {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
@@ -133,5 +133,9 @@ img {
 .item-preview img {
   width: 95%;
   height: 25vw;
-  border: #000 solid 1px;
+}
+
+.shop {
+  background-color: #FBDA61;
+  background-image: linear-gradient(45deg, #FBDA61 0%, #FF5ACD 100%);
 }
